// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente <GifExpertApp /> should show a category list 1`] = `
<Fragment>
  <h2>
    GIFs Search Engine
  </h2>
  <p>
    Place the text you want in the search box and press enter. Then the app will show related GIFs.
  </p>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Pokemon"
      key="Pokemon"
    />
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas del componente <GifExpertApp /> should show the component correctly 1`] = `
<Fragment>
  <h2>
    GIFs Search Engine
  </h2>
  <p>
    Place the text you want in the search box and press enter. Then the app will show related GIFs.
  </p>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
